syntax = "proto3";
package telemetry;

message UDTMember {
  string name = 1;
  string type_name = 2;
  uint32 offset = 3;
  uint32 size = 4;
  bool is_reference = 5;
}

message UserDefinedType {
  string name = 1;
  uint32 size = 2;
  repeated UDTMember members = 3;
}

message ContainerMetadata {
  repeated UserDefinedType types = 1;
}

message Stream {
  string stream_id = 1;
  string process_id = 2;
  ContainerMetadata dependencies_metadata = 3;
  ContainerMetadata objects_metadata = 4;
  repeated string tags = 5;
  map<string, string> properties = 6;
}
